Pre scaffolding set-up

--- a/LMS/appsettings.json
+++ b/LMS/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "IdentityConnection": "Server=atr.eng.utah.edu;Database=TeamXLMSUsers;Uid=user;Pwd=pwd"
+    "IdentityConnection": "Server=atr.eng.utah.edu;Database=Team78LMSUsers;Uid=u1097340;Pwd=Senior2021"
   },
   "Logging": {
     "IncludeScopes": false,
